[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = ["pandas", "hydrotools.nwis-client"]
description = "Hy_Features Package."
dynamic = ["version"]
license= {text = "USDOC"}
name = "hypy"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/NOAA-OWP/hypy"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["hypy"]

[tool.setuptools.dynamic]
version = {attr = "hypy._version.__version__"}
